Added an interactive sleep data table

--- a/lab4_p2.Rmd
+++ b/lab4_p2.Rmd
@@ -31,5 +31,13 @@ ggplotly(iris_graph) # Makes graph interactive
 
 ```
 
+#### Make an interactive table! (with DT)
+
+```{r}
+#Using a built in dataset 'msleep'
+datatable(msleep)
+
+
+```
 
 
